# potentialgames

./: .gitattributes  .gitignore  README.md  experiments.py  game.py  helpers.py  main.py  player.py  plot.py  requirements.txt  setup.py
aux_functions/: experiments.py  helpers.py  plot.py  tests.py
code/: main.py  pyproject.toml
code/potentialgames/mechanism/: game_engine.py  player.py
code/potentialgames/mechanism/algorithms/: abstract_algorithm.py  binary_log_linear.py  exp3p.py  exponential_weight_with_annealing.py  hedge.py  log_linear.py  modified_log_linear.py
code/potentialgames/mechanism/game_setup/: identical_interest.py  payoff_matrix.py
code/potentialgames/utils/: __init__.py  convergence.py  plot.py  visualise_data.py
code/scripts/: __init__.py  delta_estimation_experiments.py  delta_experiments.py  epsilon_experiments.py  full_feedback_comparison.py  reduced_feedback_comparison.py
code/tests/: test_fast_log_linear.py  test_log_linear.py
code/utils/: __init__.py  helpers.py
lib/: game.py
potentialgames/mechanism/: __init__.py  (+2 more)
scripts/: __init__.py  coverage_experiments.py  delta_estimation_experiments.py  delta_experiments.py  epsilon_experiments.py  experiments.py  full_feedback_comparison.py  reduced_feedback_comparison.py
src/: main.py
tests/: test_binary_log_linear.py  test_coverage.py  test_exp3p.py  test_exponential_weight_with_annealing.py  test_fast_binary_log_linear.py  test_fast_log_linear.py  test_hedge.py  test_identical_interest.py  test_log_linear.py  test_modified_log_linear.py  test_payoff_matrix.py  tests.py
(+329 files in other folders)
