[project]
name = "potentialgames"
version = "0.1.0"
description = ""
authors = [
    {name = "Hana Catic",email = "hana.catic@epfl.ch"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy (==1.24.3)",
    "matplotlib (==3.7.1)",
    "scipy (==1.10.1)",
    "pandas (==1.5.3)",
    "scienceplots @ git+https://github.com/garrettj403/SciencePlots.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
